--- a/css/style.css
+++ b/css/style.css
@@ -3,16 +3,56 @@ font-family: "Roboto",
         sans-serif;
 color: #434455;
 background-color: #fff;
+display:block;
 }
 
  ul, ol {
     list-style-type: none;
+   margin: 0;
+      padding: 0;
 }
 
  a {
     text-decoration: none;
 }
+ 
+.container {
+   max-width: 1158px;
+   padding: 15px;
+   margin:0 auto;
+}
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,  
+p{
+   margin:0;
+}
+
+ul,
+ol {
+   margin-top: 0;
+   margin-bottom: 0;
+   padding-left: 0;
+} 
+
+.page-header {
+   border-bottom: 1px solid #e7e9fc;
+}
+
+.header-container {
+   display: flex;
+ align-items: center;
+}
+
+.header-nav {
+   display: flex;
+   align-items: center;
+}
+   
  .logo {
     font-family: "Raleway", sans-serif;
     font-weight: 700;
@@ -21,6 +61,11 @@ background-color: #fff;
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #4d5ae5;
+ }
+
+ .header-logo {
+   padding:24px 0;
+   margin-right: 76px;
  }
 
 .header-logo .logo-part {
@@ -34,7 +79,16 @@ background-color: #fff;
 .footer-logo {
     margin-bottom: 16px
 }
+
+.nav-list {
+      display: flex;
+      align-items: center;
+      gap:40px
+      
+}
  .nav-link {
+   display: block;
+    padding: 24px 0;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
@@ -44,9 +98,18 @@ background-color: #fff;
 
  .contacts {
     font-style: normal;
+    margin-left:auto;
+ }
+
+ .contacts-list {
+      display: flex;
+      align-items: center;
+      gap:40px;
  }
 
  .contacts-link {
+   display:block;
+   padding:24px 0;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
