--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,19 @@
  body{
-font-family: "Roboto",
-        sans-serif;
+font-family: "Roboto", sans-serif;
 color: #434455;
 background-color: #fff;
 display:block;
 }
 
  ul, ol {
-    list-style-type: none;
+   list-style-type: none;
    margin: 0;
-      padding: 0;
+      margin-bottom: 0;
+      padding-left: 0;
 }
 
  a {
+   list-style-type:none;
     text-decoration: none;
 }
  
@@ -32,12 +33,11 @@ p{
    margin:0;
 }
 
-ul,
-ol {
-   margin-top: 0;
-   margin-bottom: 0;
-   padding-left: 0;
-} 
+img {
+   display: block;
+   max-width: 100%;
+   height: auto;
+}
 
 .page-header {
    border-bottom: 1px solid #e7e9fc;
@@ -122,59 +122,109 @@ ol {
  .contacts-link:focus {
     color: #404bbf;
  }
-
- .main-page{
-    background-color: #2e2f42;
- }
-
+ 
+.section-page {
+   background-color: #2e2f42;
+   padding: 188px 0;
+   text-align: center;
+}
+     
  .main-title {
     font-size: 56px;
     line-height: 1.07;
     text-align:center;
     letter-spacing: 0.02em;
     color: #ffffff;
- }
+    max-width: 496px;
+    margin: 0 auto 48px auto;
+    margin-bottom:45px;
+    font-weight:700;
+   }
 
- .order-button {
-    background-color: #4D5AE5;
-    font-family: "Roboto", sans-serif;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.04em;
-    color: #ffffff;
-    cursor: pointer;
- }
+   .button-wrapper {
+      display: block;
+      min-width: 169px;
+      height: 56px;
+      border: none;
+      border-radius: 4px;
+      margin: 0 auto;
+   }
 
- .order-button:hover,
- .order-button:focus {
-    background-color: #404BBF;
- }
+   .button-wrapper:hover,
+   .button-wrapper:focus {
+      background-color: #404bbf;
+      cursor: pointer;
+   }
+      
+      .order-button {
+         background-color: #4D5AE5;
+         font-family: "Roboto", sans-serif;
+         font-weight: 500;
+         font-size: 16px;
+         line-height: 1.5;
+         letter-spacing: 0.04em;
+         color: #ffffff;
+         cursor: pointer;
+         padding: 16px 32px;
+         border: none;
+         border-radius: 4px;
+      }
 
+ 
  .page-footer {
     background-color: #2e2f42;
+    cursor: pointer;
+   padding: 100px 1020px 100px 156px;
  }
 
  .footer-logo .logo-part {
      color:  #f4f4fd;
  }
 
+ .section2-container {
+   padding: 120px 0;
+ }
+
+ .benefits-title {
+   position: absolute;
+   width: 1px;
+   height: 1px;
+   margin: -1px;
+   border: 0;
+   padding: 0;
+   white-space: nowrap;
+      clip-path: inset(100%);
+      overflow: hidden;
+ }
+
+ .benefits-list {
+   display: flex;
+   gap: 24px;
+ }
+
+ .benefits-item {
+   width: calc((100%-72)/4);;
+ }
  .benefits-subtitle {
    font-weight:500;
    font-size:20px;
    line-height:1.2;
    letter-spacing:0.02em;
    color: #2e2f42;
+   text-transform: capitalize;
+   padding-bottom:72px;
+   text-align: center;
  }
 
  .benefits-text {
    line-height:1.5;
    letter-spacing:0.02em;
- }
+   }
 
  .team {
    background-color:#F4F4FD;
-}
+   padding: 120px 0;
+ }
 
  .team-title {
    font-size:36px;
@@ -187,13 +237,18 @@ ol {
 
  .team-list {
   list-style-type: none;
+  display: flex;
+  gap: 24px;
  }
 
  .team-item {
   background-color: #ffffff;
   text-align: center;
-}
-
+  flex-basis: calc((100% -72px) /4);
+  border-radius:0 0 4px 4px;
+  box-shadow: 0 2px 1px rgba(46, 47, 66, 0.16),
+      0 1px 6px rgba(46, 47, 66, 0.08);
+ }
 
  .team-subtitle {
    font-weight:500;
@@ -208,6 +263,15 @@ ol {
    letter-spacing:0.02em; 
  }
 
+ .portfolio {
+   padding-top: 120px;
+   padding-bottom:120px;
+ }
+
+ .portfolio-item{
+width: calc((100% - 48px) / 3);
+ }
+
  .portfolio-heading {
     font-size: 36px;
     line-height: 1.11;
@@ -215,6 +279,14 @@ ol {
     letter-spacing: 0.02em;
     text-transform: capitalize;
     color: #2e2f42;
+    margin-bottom: 72px;
+ }
+
+ .portfolio-list {
+   display: flex;
+   flex-wrap: wrap;
+   column-gap: 24px;
+   row-gap:48px;
  }
 
  .project-title {
@@ -233,9 +305,27 @@ ol {
  }
 
  .footer-text {
-   line-height:1.5;
-   color: #F4F4FD;
-   letter-spacing:0.02em;
+    max-width: 264px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #f4f4fd;
+ }
+
+ .footer-logo {
+    display: block;
+    margin-bottom: 16px;
+    font-family: "Raleway", sans-serif;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #4d5ae5;
+ }
+
+ .footer-container {
+    width: 264px;
+    height: 112px;
  }
  
 
