--- a/css/style.css
+++ b/css/style.css
@@ -130,7 +130,7 @@ img {
 }
      
  .main-title {
-    font-size: 56px;
+   /* font-size: 56px;
     line-height: 1.07;
     text-align:center;
     letter-spacing: 0.02em;
@@ -138,7 +138,14 @@ img {
     max-width: 496px;
     margin: 0 auto 48px auto;
     margin-bottom:45px;
-    font-weight:700;
+    font-weight:700;*/
+   max-width: 496px;
+      margin: 0 auto 48px;
+      font-size: 56px;
+      line-height: 1.07;
+      letter-spacing: 0.02em;
+      font-weight: 700;
+      color: #ffffff;
    }
 
    .button-wrapper {
