--- a/css/style.css
+++ b/css/style.css
@@ -148,7 +148,7 @@ img {
       color: #ffffff;
    }
 
-   .button-wrapper {
+   /*.button-wrapper {
       display: block;
       min-width: 169px;
       height: 56px;
@@ -161,10 +161,31 @@ img {
    .button-wrapper:focus {
       background-color: #404bbf;
       cursor: pointer;
-   }
+   }*/
       
       .order-button {
-         background-color: #4D5AE5;
+            display: block;
+            min-width: 169px;
+            height: 56px;
+            margin: 0 auto;
+            border: none;
+            background-color: var(--brand-color, #4d5ae5);
+            border-radius: 4px;
+            cursor: pointer;
+      
+            font-family: "Roboto", sans-serif;
+            font-weight: 500;
+            font-size: 16px;
+            line-height: 1.5;
+            letter-spacing: 0.04em;
+            color: #ffffff;
+         }
+      
+         .order-button:hover,
+         .order-button:focus {
+            background-color: #404bbf;
+         }
+       /*  background-color: #4D5AE5;
          font-family: "Roboto", sans-serif;
          font-weight: 500;
          font-size: 16px;
@@ -174,11 +195,9 @@ img {
          cursor: pointer;
          padding: 16px 32px;
          border: none;
-         border-radius: 4px;
-      }
-
- 
- .page-footer {
+         border-radius: 4px;*/
+         
+.page-footer {
     background-color: #2e2f42;
     cursor: pointer;
    padding: 100px 1020px 100px 156px;
