--- a/css/style.css
+++ b/css/style.css
@@ -130,15 +130,6 @@ img {
 }
      
  .main-title {
-   /* font-size: 56px;
-    line-height: 1.07;
-    text-align:center;
-    letter-spacing: 0.02em;
-    color: #ffffff;
-    max-width: 496px;
-    margin: 0 auto 48px auto;
-    margin-bottom:45px;
-    font-weight:700;*/
    max-width: 496px;
       margin: 0 auto 48px;
       font-size: 56px;
@@ -148,55 +139,29 @@ img {
       color: #ffffff;
    }
 
-   /*.button-wrapper {
+  .order-button {
       display: block;
       min-width: 169px;
       height: 56px;
-      border: none;
-      border-radius: 4px;
       margin: 0 auto;
-   }
-
-   .button-wrapper:hover,
-   .button-wrapper:focus {
-      background-color: #404bbf;
+      border: none;
+      background-color: var(--brand-color, #4d5ae5);
+      border-radius: 4px;
       cursor: pointer;
-   }*/
       
-      .order-button {
-            display: block;
-            min-width: 169px;
-            height: 56px;
-            margin: 0 auto;
-            border: none;
-            background-color: var(--brand-color, #4d5ae5);
-            border-radius: 4px;
-            cursor: pointer;
-      
-            font-family: "Roboto", sans-serif;
-            font-weight: 500;
-            font-size: 16px;
-            line-height: 1.5;
-            letter-spacing: 0.04em;
-            color: #ffffff;
-         }
+      font-family: "Roboto", sans-serif;
+       font-weight: 500;
+      font-size: 16px;
+      line-height: 1.5;
+      letter-spacing: 0.04em;
+      color: #ffffff;
+   }
       
          .order-button:hover,
          .order-button:focus {
             background-color: #404bbf;
          }
-       /*  background-color: #4D5AE5;
-         font-family: "Roboto", sans-serif;
-         font-weight: 500;
-         font-size: 16px;
-         line-height: 1.5;
-         letter-spacing: 0.04em;
-         color: #ffffff;
-         cursor: pointer;
-         padding: 16px 32px;
-         border: none;
-         border-radius: 4px;*/
-         
+      
 .page-footer {
     background-color: #2e2f42;
     cursor: pointer;
@@ -206,12 +171,27 @@ img {
  .footer-logo .logo-part {
      color:  #f4f4fd;
  }
+ .section2 {
+   padding:120 0; 
+}
 
- .section2-container {
+ /*.section2-container {
    padding: 120px 0;
+ }*/
+
+ .visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    padding: 0;
+    overflow: hidden;
+    clip-path: incert(100%);
+    border: 0;
+    white-space: nowrap;
  }
 
- .benefits-title {
+ /*.benbefits-title {
    position: absolute;
    width: 1px;
    height: 1px;
@@ -221,7 +201,7 @@ img {
    white-space: nowrap;
       clip-path: inset(100%);
       overflow: hidden;
- }
+ }*/
 
  .benefits-list {
    display: flex;
@@ -240,6 +220,7 @@ img {
    text-transform: capitalize;
    padding-bottom:72px;
    text-align: center;
+   margin-bottom:8px;
  }
 
  .benefits-text {
