--- a/css/style.css
+++ b/css/style.css
@@ -206,6 +206,8 @@ img {
  .benefits-list {
    display: flex;
    gap: 24px;
+   padding:0;
+   margin: 0;
  }
 
  .benefits-item {
@@ -226,6 +228,8 @@ img {
  .benefits-text {
    line-height:1.5;
    letter-spacing:0.02em;
+   font-size:16px;
+   color:#434455;
    }
 
  .team {
