--- a/css/style.css
+++ b/css/style.css
@@ -220,7 +220,7 @@ img {
    letter-spacing:0.02em;
    color: #2e2f42;
    text-transform: capitalize;
-   padding-bottom:72px;
+   /*padding-bottom:72px;*/
    text-align: center;
    margin-bottom:8px;
  }
@@ -283,13 +283,14 @@ img {
  }
 
  .portfolio {
-   padding-top: 120px;
-   padding-bottom:120px;
+   padding: 120px 0;
+   
  }
 
  .portfolio-item {
 width: calc((100% - 48px) / 3);
- }
+ list-style: none;
+}
 
  .portfolio-heading {
     font-size: 36px;
@@ -306,6 +307,8 @@ width: calc((100% - 48px) / 3);
    flex-wrap: wrap;
    column-gap: 24px;
    row-gap:48px;
+   padding: 0;
+      margin: 0;
  }
 
  .project-title {
@@ -314,7 +317,9 @@ width: calc((100% - 48px) / 3);
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: #2e2f42;
+    
  }
+   
 
  .project-text {
     font-size: 16px;
