--- a/css/style.css
+++ b/css/style.css
@@ -184,11 +184,12 @@ img {
     width: 1px;
     height: 1px;
     margin: -1px;
-    padding: 0;
-    overflow: hidden;
-    clip-path: incert(100%);
     border: 0;
+    padding: 0;
     white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
  }
 
  /*.benbefits-title {
@@ -303,12 +304,12 @@ width: calc((100% - 48px) / 3);
  }
 
  .portfolio-list {
-   display: flex;
-   flex-wrap: wrap;
-   column-gap: 24px;
-   row-gap:48px;
-   padding: 0;
-      margin: 0;
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 24px;
+    row-gap: 48px;
+    padding: 0;
+    margin: 0;
  }
 
  .project-title {
