--- a/css/style.css
+++ b/css/style.css
@@ -320,6 +320,12 @@ width: calc((100% - 48px) / 3);
     color: #2e2f42;
     
  }
+
+ .project-box {
+    padding: 32px 16px;
+    border: 1px solid #e7e9fc;
+    border-top: none;
+ }
    
 
  .project-text {
